crates/rome_formatter/tests/specs/prettier/js/babel-plugins/record-tuple-tuple.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: record-tuple-tuple.js

---
# Input
```js
const tuple1 = #[1, 2, 3];

```

# Output
```js
const tuple1 = #
[1, 2, 3];

```

# Errors
```
error[SyntaxError]: expected `IDENT` but instead found `[`
  ┌─ record-tuple-tuple.js:1:17
  │
1 │ const tuple1 = #[1, 2, 3];
  │                 ^ unexpected


```


